@@ -266,6 +266,8 @@ public class Texture {
 	public static final Texture quartzChiseledTop = new Texture();
 	public static final Texture quartzPillar = new Texture();
 	public static final Texture quartzPillarTop = new Texture();
+	public static final Texture daylightDetectorTop = new Texture();
+	public static final Texture daylightDetectorSide = new Texture();
 	public static final Texture unknown = new Texture("unknown");
 	
 	public static final Texture signPost = new Texture();
